Add support for Facebook login for business configurations

--- a/templates/channels/types/facebookapp/claim.html
+++ b/templates/channels/types/facebookapp/claim.html
@@ -60,10 +60,17 @@
   {{ block.super }}
   <script type="text/javascript">
     $(document).ready(function() {
+      {% if facebook_login_messenger_config_id %}
+      $(".connect-facebook").click(function(evt) {
+        location.replace("https://www.facebook.com/v18.0/dialog/oauth?client_id={{ facebook_app_id }}&redirect_uri=" + window.location.origin + window.location.pathname + "&config_id={{ facebook_login_messenger_config_id }}&response_type=token")
+
+      });
+      {% else %}
       $(".connect-facebook").click(function(evt) {
         location.replace("https://www.facebook.com/v18.0/dialog/oauth?client_id={{ facebook_app_id }}&redirect_uri=" + window.location.origin + window.location.pathname + "&scope=pages_messaging,pages_show_list,pages_manage_metadata,pages_read_engagement&response_type=token")
 
       });
+      {% endif %}
 
       var hash = window.location.hash.substring(1)
       var result = hash.split('&').reduce(function(res, item) {
