--- a/templates/channels/types/instagram/refresh_token.html
+++ b/templates/channels/types/instagram/refresh_token.html
@@ -40,6 +40,21 @@
   <script type="text/javascript">
     $(document).ready(function() {
       $(".connect-facebook").click(function(evt) {
+        {% if facebook_login_instagram_config_id %}
+        FB.login(function(response) {
+          if (response.status === 'connected') {
+            $("#fb-user-id").val(response.authResponse.userID);
+            $("#user-access-token").val(response.authResponse.accessToken);
+            $("#refresh-token-form").submit();
+          } else {
+            $("#fb-status").hide();
+            $("#fb-channel-error").show();
+          }
+
+        }, {
+          config_id: '{{ facebook_login_instagram_config_id }}'
+        });
+        {% else %}
         FB.login(function(response) {
           if (response.status === 'connected') {
             $("#fb-user-id").val(response.authResponse.userID);
@@ -53,7 +68,7 @@
         }, {
           scope: 'instagram_basic,instagram_manage_messages,pages_manage_metadata,pages_messaging,pages_read_engagement,pages_show_list'
         });
-
+        {% endif %}
       })
     });
   </script>
