--- a/templates/channels/channel_claim.html
+++ b/templates/channels/channel_claim.html
@@ -5,7 +5,7 @@
   {% trans "New Channel" %}
 {% endblock title-text %}
 {% block content %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     To send and receive messages you need to add a channel to your workspace. A channel is a phone number or social network
     account which {{ name }} can use to send and receive messages on your behalf.
   {% endblocktrans %}
