--- a/templates/channels/types/facebook_legacy/claim.html
+++ b/templates/channels/types/facebook_legacy/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     In order to connect your Facebook page to {{ name }} you will need to
     <a href="https://developer.facebook.com/">create a new Facebook application</a> that
     has messaging permissions.
