--- a/templates/channels/types/firebase/claim.html
+++ b/templates/channels/types/firebase/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can to connect using a <a href="https://firebase.google.com/docs/cloud-messaging/">Firebase Cloud Messaging App</a> to your {{ name }} workspace to automate sending notifications.
   {% endblocktrans %}
   {% blocktrans trimmed %}
