--- a/templates/channels/types/freshchat/claim.html
+++ b/templates/channels/types/freshchat/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can connect a <a href="https://www.freshworks.com/live-chat-software/">FreshChat</a> Account to your {{ name }} account
     to automate sending and receiving messages via FreshChat. This will also support Apple Business Chat if it's been configured on your FreshChat account.
   {% endblocktrans %}
