--- a/templates/channels/types/messagebird/claim.html
+++ b/templates/channels/types/messagebird/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can connect a <a href="https://messagebird.com/en/">Messagebird</a> Account to your {{ name }} account
     to automate sending and receiving messages via Messagebird phone numbers and shortcodes.
   {% endblocktrans %}
