--- a/templates/channels/types/telegram/claim.html
+++ b/templates/channels/types/telegram/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can connect a <a target="_blank" href="https://core.telegram.org/bots">Telegram Bot</a> to your {{ name }} workspace
     to automate sending and receiving Telegram messages.
   {% endblocktrans %}
