--- a/templates/channels/types/twilio_messaging_service/claim.html
+++ b/templates/channels/types/twilio_messaging_service/claim.html
@@ -7,7 +7,7 @@
     or create a new messaging service from <a target="_blank" href="https://www.twilio.com/user/account/messaging/services">Twilio Console</a>.
   {% endblocktrans %}
   <div class="mt-2">
-    {% blocktrans trimmed with brand.name as brand %}
+    {% blocktrans trimmed with branding.name as brand %}
       After adding your Twilio Messaging Service SID we will provide you with the URL endpoint for Twilio to call
       when they want to push a message to {{ brand }}.
     {% endblocktrans %}
