--- a/templates/channels/types/twitter_activity/claim.html
+++ b/templates/channels/types/twitter_activity/claim.html
@@ -7,7 +7,7 @@
   <a href="https://developer.twitter.com/en/docs/accounts-and-users/subscribe-account-activity/guides/getting-started-with-webhooks">create a
     Twitter application</a>. Make sure your Twitter application has "Read, Write and Direct Message" permissions.
     <div class="mt-2">
-      {% blocktrans trimmed with name=brand.name %}
+      {% blocktrans trimmed with name=branding.name %}
         After connecting your account, any incoming direct messages will automatically be read by {{ name }},
         you'll also be able to send direct messages to contacts you know using their twitter handle.
       {% endblocktrans %}
