--- a/templates/channels/types/vk/claim.html
+++ b/templates/channels/types/vk/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans with name=brand.name trimmed %}
+  {% blocktrans with name=branding.name trimmed %}
     To connect your VK community to RapidPro, you will need to
     create a community token with messaging permissions.
   {% endblocktrans %}
