--- a/templates/flows/flow_editor.html
+++ b/templates/flows/flow_editor.html
@@ -172,7 +172,7 @@
       onChangeLanguage: handleChangeLanguage,
       mutable: JSON.parse("{{mutable|js_bool}}"),
       filters: JSON.parse("{{feature_filters|escapejs}}"),
-      brand: '{{brand.name|escapejs}}',
+      brand: '{{branding.name|escapejs}}',
 
       help: {
         legacy_extra: 'https://help.nyaruka.com/',
