--- a/templates/orgs/org_resthooks.html
+++ b/templates/orgs/org_resthooks.html
@@ -8,7 +8,7 @@
       to flow events you create and trigger any number of Zapier integrations when they occur in your flows.
     {% endblocktrans %}
   </div>
-  {% if brand.guided_zaps|length > 0 %}
+  {% if branding.guided_zaps|length > 0 %}
     <script type="module"
             src="https://zapier.com/partner/embed/app-directory/wrapper.js?id=zapier-app-directory&app=textit&theme=light&hide=salesforce-legacy%2Czendesk&zapstyle=row&introcopy=hide"></script>
   {% endif %}
