--- a/templates/orgs/org_signup.html
+++ b/templates/orgs/org_signup.html
@@ -5,7 +5,7 @@
   {% trans "Create Account" %}
 {% endblock login-title %}
 {% block login-content %}
-  {% blocktrans trimmed with brand.name as brand %}
+  {% blocktrans trimmed with branding.name as brand %}
     Creating a {{ brand }} account is free and only takes a minute.
   {% endblocktrans %}
   <form method="post" class="my-6">
