--- a/templates/orgs/org_smtp_server.html
+++ b/templates/orgs/org_smtp_server.html
@@ -8,7 +8,7 @@
 {% endblock summary %}
 {% block pre-form %}
   <div class="mb-4">
-    {% blocktrans trimmed with brand=brand.name %}
+    {% blocktrans trimmed with brand=branding.name %}
       You can configure {{ brand }} to send emails generated within flows from an email address of your choosing.
     {% endblocktrans %}
   </div>
