--- a/templates/tickets/ticket_list.html
+++ b/templates/tickets/ticket_list.html
@@ -523,7 +523,7 @@
               {% endblocktrans %}
             </h2>
             <div class="mt-6">
-              {% blocktrans with name=brand.name trimmed %}
+              {% blocktrans with name=branding.name trimmed %}
                 {{ name }} Tickets makes it easy to chat directly with your contacts.
               {% endblocktrans %}
             </div>
