--- a/templates/channels/types/external/claim.html
+++ b/templates/channels/types/external/claim.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with brand.name as brand %}
+  {% blocktrans trimmed with branding.name as brand %}
     You can connect an external aggregator or messaging service to {{ brand }} using our external API. You can
     specify parameters to substitute in the URL or body by using these variables:
   {% endblocktrans %}
@@ -54,7 +54,7 @@
   {% endblocktrans %}
 </div>
 <div class="mt-4">
-  {% blocktrans trimmed with brand.name as brand %}
+  {% blocktrans trimmed with branding.name as brand %}
     After connecting your service we will provide URLs for the endpoints to call when you want to push a message to
     {{ brand }} or notify {{ brand }} of the delivery status of a message.
   {% endblocktrans %}
