--- a/templates/channels/types/facebookapp/claim.html
+++ b/templates/channels/types/facebookapp/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can connect your Facebook page to {{ name }} in just a few simple steps.
   {% endblocktrans %}
   {% if claim_error %}
