--- a/templates/channels/types/globe/claim.html
+++ b/templates/channels/types/globe/claim.html
@@ -2,13 +2,13 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can connect your <a href="http://www.globelabs.com.ph/">Globe Labs</a> application to {{ name }} using the fields below. You
     will first need to create a Globe Labs application, then get approval from Globe Labs by sending an email
     to <a href:"mailto:api@globelabsbeta.com">api@globelabsbeta.com</a>.
   {% endblocktrans %}
   <div class="mt-2">
-    {% blocktrans trimmed with name=brand.name %}
+    {% blocktrans trimmed with name=branding.name %}
       With the approval from Globe Labs you will receive the passphrase to use below.
     {% endblocktrans %}
   </div>
