--- a/templates/channels/types/infobip/claim.html
+++ b/templates/channels/types/infobip/claim.html
@@ -7,7 +7,7 @@
     here.
   {% endblocktrans %}
   <div class="my-4">
-    {% blocktrans trimmed with brand.name as brand %}
+    {% blocktrans trimmed with branding.name as brand %}
       After connecting your service we will provide URLs for the endpoints for InfoBip to call when they want
       to push a message to {{ brand }}.
     {% endblocktrans %}
