--- a/templates/channels/types/jiochat/claim.html
+++ b/templates/channels/types/jiochat/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can connect a <a href="https://jiochat.com">JioChat Channel</a> to your {{ name }} workspace
     to automate sending and receiving JioChat messages.
   {% endblocktrans %}
