--- a/templates/channels/types/line/claim.html
+++ b/templates/channels/types/line/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can connect a <a href="https://developers.line.biz/en/docs/messaging-api/overview/">LINE Bot</a> to your {{ name }} workspace
     to automate sending and receiving LINE messages.
   {% endblocktrans %}
