--- a/templates/channels/types/rocketchat/claim.html
+++ b/templates/channels/types/rocketchat/claim.html
@@ -2,7 +2,7 @@
 {% load i18n compress temba %}
 
 {% block pre-form %}
-  {% blocktrans trimmed with name=brand.name %}
+  {% blocktrans trimmed with name=branding.name %}
     You can connect Rocket.Chat to {{ name }} in a few simple steps.
   {% endblocktrans %}
   <ol class="steps card">
@@ -17,19 +17,19 @@
       {% endblocktrans %}
     </li>
     <li>
-      {% blocktrans trimmed with brand=brand.name %}
+      {% blocktrans trimmed with brand=branding.name %}
         Install the app <b>{{ brand }} Channel</b> from the <i>Marketplace</i>.
       {% endblocktrans %}
     </li>
     <li>
-      {% blocktrans trimmed with brand=brand.name %}
+      {% blocktrans trimmed with brand=branding.name %}
         Open the app details at <i>Administration</i> &gt; <i>Apps</i> &gt; <i>{{ brand }} Channel</i>, and in
         its settings section put the following token in the <i>App Secret</i> field:
         <div class="code">{{ secret }}</div>
       {% endblocktrans %}
     </li>
     <li>
-      {% blocktrans trimmed with brand=brand.name %}
+      {% blocktrans trimmed with brand=branding.name %}
         Save the changes. Copy the app's URL and paste it in the URL field. It should end with a long ID,
         for example: https://my.rocket.chat/api/apps/public/51c5cebe-b8e4-48ae-89d3-2b7746019cc4
       {% endblocktrans %}
