--- a/templates/includes/frame_bottom.html
+++ b/templates/includes/frame_bottom.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 
 <center>
-  <p id="copyright">{{ request.branding.credits|safe }}</p>
+  <p id="copyright">{{ branding.credits|safe }}</p>
 </center>
