--- a/templates/orgs/org_surveyor.html
+++ b/templates/orgs/org_surveyor.html
@@ -3,15 +3,15 @@
 
 {% block content %}
   <p>
-    {% blocktrans trimmed with org.name as org and brand.name as brandname %}
+    {% blocktrans trimmed with org.name as org and branding.name as brandname %}
       To get started submitting surveys for {{ org }}, download the {{ brandname }} Surveyor app from
       Google Play. After you install the Surveyor app on your Android phone, simply login with the same
       email address you use to login to {{ brandname }}.
     {% endblocktrans %}
     <br>
     <br>
-    <a href="https://play.google.com/store/apps/details?id={{ brand.android_surveyor }}">
-      <img alt="{{ brand.name }} Surveyor on Google Play"
+    <a href="https://play.google.com/store/apps/details?id={{ branding.android_surveyor }}">
+      <img alt="{{ branding.name }} Surveyor on Google Play"
            src="https://developer.android.com/images/brand/en_app_rgb_wo_45.png">
     </a>
   </p>
