--- a/templates/public/video_list.html
+++ b/templates/public/video_list.html
@@ -3,13 +3,13 @@
 {% load i18n %}
 
 {% block page-title %}
-  {% blocktrans with brand=brand.name %}
+  {% blocktrans with brand=branding.name %}
     Learn {{ brand }} - SMS Application Videos and Tutorials
 
   {% endblocktrans %}
 {% endblock page-title %}
 {% block page-description %}
-  {% blocktrans with brand=brand.name %}
+  {% blocktrans with brand=branding.name %}
     Start building SMS applications by watching these short two minutes videos on various {{ brand }} features.
 
   {% endblocktrans %}
@@ -61,7 +61,7 @@
       <div href="{% url "public.video_create" %}" onclick="goto(event)" class="inline button-primary">{% trans "Add Video" %}</div>
     </div>
   {% endif %}
-  {% blocktrans with brand=brand.name %}
+  {% blocktrans with brand=branding.name %}
     To make sure you get the most out of {{brand}}, we've put together a bunch of short videos to guide you through
     some of the most powerful features. Each of these videos are only a couple minutes, but they will help you
     build complex flows without a lot of effort.
