Add quick replies to broadcasts

--- a/templates/msgs/broadcast.html
+++ b/templates/msgs/broadcast.html
@@ -20,7 +20,7 @@
     </div>
     <div class="flex flex-row p-4">
       <div class="flex-grow">
-        <div class="text">{{ translation.text }}</div>
+        <div class="text">{{ translation.text }}<br/>{% for reply in translation.quick_replies %}<temba-label class="mr-2 mt-2" backgroundcolor="#fafafa">{{reply}}</temba-label>{% endfor %}</div>
       </div>
       <div class="attachments  ml-2 flex-wrap">
         {% for attachment in translation.attachments %}
@@ -28,6 +28,7 @@
         {% endfor %}
       </div>
     </div>
+
     {% if not broadcast.schedule %}
       <div class="flex flex-row px-4 py-2 bg-gray-100 text-sm schedule text-center">
         <div class="inline-block align-bottom text-gray-700 flex">
