Update trigger type icons

--- a/templates/triggers/trigger_list.html
+++ b/templates/triggers/trigger_list.html
@@ -59,7 +59,7 @@
               <div>
                 <div style="max-width:80%" class="flex flex-grow items-center">
                   <div class="flex items-center mr-2">
-                    <temba-icon name="{{ obj.type.icon }}" class="text-gray-600">
+                    <temba-icon name="trigger_{{ obj.type.slug }}" class="text-gray-600">
                     </temba-icon>
                   </div>
                   <div class="flex-grow">
