--- a/templates/utils/forms/wizard.html
+++ b/templates/utils/forms/wizard.html
@@ -30,6 +30,7 @@
         {{ wizard.form.management_form }}
         {% for form in wizard.form.forms %}{{ form.as_table }}{% endfor %}
       {% else %}
+        {% if wizard.form.non_field_errors %}<div class="alert alert-error form-errors">{{ wizard.form.non_field_errors }}</div>{% endif %}
         {% block fields %}
           {% for field in wizard.form.fields %}
             {% render_field field %}
