Add verified label next to the email on the account page

--- a/templates/orgs/user_edit.html
+++ b/templates/orgs/user_edit.html
@@ -24,13 +24,14 @@
       {% blocktrans with email=user.username %}
       Your email address is <b>{{email}}</b>
       {% endblocktrans %}
+      {% if user.settings.email_status == 'V' %}
+        <temba-label icon="icon.org_verified" class="mr-2">
+          {% trans "Verified" %}
+        </temba-label>
+      {% endif %}
     </div>
     <div class="buttons">
-      {% if user.settings.email_status == 'V' %}
-        <temba-label>
-          Verified
-        </temba-label>
-      {% else %}
+      {% if user.settings.email_status != 'V' %}
         <div onclick="goto(event)" href="{% url 'orgs.user_send_verification_email' %}" class="button-light">{% trans "Verify Email" %}</div>
       {% endif %}
     </div>
